# dcscrape

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: build-and-upload.yaml
src/: constants.rs  lib.rs  main.rs  parse_article.rs
