[package]
name = "dcscrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3"
scraper = "0.15.0"
regex = "1"
serde_json = "1.0"
chrono = "0.4.24"
html2text = "0.5.1"
reqwest_cookie_store = "0.5.0"
cookie_store = "0.19.0"
